# game_of_shiza

./: CMakeLists.txt  README.md
game_of_life/: CMakeLists.txt  main.cpp
game_of_life/life_backend/include/: Life.h
game_of_life/life_backend/src/: Life.cpp
gtestset/: CMakeLists.txt  main.cpp
gtestset/tests/: life_backend_tests.cpp
life_backend/: CMakeLists.txt
life_backend/include/: life_backend.h
life_backend/src/: life_backend.cpp
life_frontend/: CMakeLists.txt  variables.h.in
life_frontend/include/: game_of_shiza.h  life_frontend.h
life_frontend/src/: life_frontend.cpp  main.cpp  variables.h
